--- a/src/plugins/serial-monitor/mcu-term.ejs
+++ b/src/plugins/serial-monitor/mcu-term.ejs
@@ -1,2 +1,2 @@
 <link rel="import" href="components/serial-monitor/orov-serial-monitor.html">
-<serial-monitor event-emitter="{{cockpitEventEmitter}}"></serial-monitor>
+<orov-serial-monitor class="no-mousetrap" event-emitter="{{cockpitEventEmitter}}"></orov-serial-monitor>
