Added role to mobile ui

--- a/src/plugins/mobile-ui/cockpit.ejs
+++ b/src/plugins/mobile-ui/cockpit.ejs
@@ -63,6 +63,9 @@
 
 					<div class="action-bar">
 						<div class="action-bar-container">
+
+							<div class="user-role leftend">{{userRole}}</div>
+
 							<div class="battery">
 								<orov-mobile-battery event-emitter="{{cockpitEventEmitter}}"></orov-mobile-battery>
 							</div>
