--- a/src/plugins/data-viewer/data.ejs
+++ b/src/plugins/data-viewer/data.ejs
@@ -5,4 +5,7 @@
   </style>
   <link rel="import" href="components/blackbox/orov-blackbox-downloader.html">
   <link rel="import" href="components/video/orov-video.html">
+  <div>
+  <p>{{__("This page allows interaction with past recoded dives.")}}</p>
   <orov-blackbox-downloader event-emitter="{{cockpitEventEmitter}}"/>
+  </div>
