Fixed all log errors

--- a/src/plugins/classic-ui/header.ejs
+++ b/src/plugins/classic-ui/header.ejs
@@ -360,9 +360,9 @@ body {
 
 <div id="header" class="navbar navbar-inverse navbar-fixed-top nav-collapse">
   <div class="navbar-inner">
-    <a class="brand" href="#"><img src="themes/OpenROV/img/openrov.png" class="logo"/><span class="navbar-titel">Cockpit</span></a>
+    <a class="brand" href="#"><img src="img/openrov.png" class="logo"/><span class="navbar-titel">Cockpit</span></a>
     <ul class="nav pull-left" id="navtoolbar">
-      <li><a href="#"><img id="keyboardpopover" src="themes/OpenROV/img/keyboard.png" onclick="document.querySelector('#keyboard-listing').open();"/></a></li>
+      <li><a href="#"><img id="keyboardpopover" src="img/keyboard.png" onclick="document.querySelector('#keyboard-listing').open();"/></a></li>
       <li><a href="#" id="servoTilt" ><orov-servo-tilt class="pull-left" event-emitter="{{cockpitEventEmitter}}"></orov-servo-tilt></a></li>
       <li><a href="#"><orov-external-brightness-indicator  class="pull-left"  event-emitter="{{cockpitEventEmitter}}"></orov-external-brightness-indicator></a></li>
       <li><a href="#"><rov-gamepad class="pull-left"></rov-gamepad></a></li>
