Incorporated team feedback
             * Add scroll bar
             * Use gamepad for changing gamepad
             * Navigation that works with a gamepad and keyboard for a
selector
             * In line changing (no sub menu of keyboard/gamepad),
unbind
             * X Turn off mousetrap capture of the Find window
             * Show duplicates somehow
             * Invert axis option
             * How do we deal with Axis stuff?
             * Make description more prominent?
             * fix the endless scroll issue

--- a/src/plugins/input-configurator/input.ejs
+++ b/src/plugins/input-configurator/input.ejs
@@ -1,4 +1,4 @@
 
   <link rel="import" href="components/input-configurator/orov-input-configurator.html">
 
-  <orov-input-configurator event-emitter="{{cockpitEventEmitter}}"/>
+  <orov-input-configurator class="no-mousetrap" event-emitter="{{cockpitEventEmitter}}"/>
