--- a/src/plugins/data-viewer/data.ejs
+++ b/src/plugins/data-viewer/data.ejs
@@ -7,5 +7,6 @@
   <link rel="import" href="components/video/orov-video.html">
   <div>
   <p>{{__("This page allows interaction with past recoded dives.")}}</p>
+  <p>{{__("This feature is in BETA. Please report problems at https://github.com/openrov/openrov-software/issues")}}</p>
   <orov-blackbox-downloader event-emitter="{{cockpitEventEmitter}}"/>
   </div>
