Mission Control marked BETA

--- a/src/plugins/peer-view/misctrl.ejs
+++ b/src/plugins/peer-view/misctrl.ejs
@@ -2,4 +2,6 @@
 <h4>Mission Control</h4>
 This lists the viewers and handles allowcating permissions for those users.
 This module is responsbile for accepting the control messages from those users once they have permissions.
+<p>{{__("This feature is in BETA. Please report problems at https://github.com/openrov/openrov-software/issues")}}</p>
+
 <orov-mc-assignments event-emitter="{{cockpitEventEmitter}}"></orov-mc-assignments>
