--- a/src/plugins/new-ui/cockpit.ejs
+++ b/src/plugins/new-ui/cockpit.ejs
@@ -19,79 +19,80 @@
 
 <!--script type='text/javascript' src="js/no-scroll-fullscreen-viewport.js"></script-->
 <style>
-  #time-item[short-layout]{
+    #time-item[short-layout] {
         display: none;
-  }
+    }
+    
+    fieldset {
+        display: block;
+        margin-left: 1.0em;
+        margin-right: 1.0em;
+        border: 2px solid white;
+    }
+    
+    legend {
+        display: table;
+        min-width: 0px;
+        max-width: 70%;
+        position: relative;
+        margin-bottom: 0em;
+        padding: .35em .35em;
+        font-size: 1.1vw;
+        color: white;
+        text-align: center;
+        border-bottom: 0px;
+    }
 </style>
 <!--iron-media-query query="(max-height: 600px)" query-matches="{{short}}"></iron-media-query-->
 
-  <div id="UI" class="full-height">
-        <div id="newuiBody" class="full-height">
-          <div id="newuiContainer">
-          </div>
-          <div id="mainContent" class="full-height">
+<div id="UI" class="full-height">
+    <div id="newuiBody" class="full-height">
+        <div id="newuiContainer">
+        </div>
+        <div id="mainContent" class="full-height">
 
             <div id="newuiVideo" class="full-height">
-              <orov-video id="camera1" border='1' style='width: 100%; height:100%; position:relative' location='forward' event-emitter="{{cockpitEventEmitter}}">
-                <div id='twitchembed' style='position:absolute; top:0px; left:0px; z-index:33;'></div>
-                <orov-twitch-stream-status style='position:absolute; top:0px; left:0px; z-index:33;' event-emitter="{{cockpitEventEmitter}}"></orov-twitch-stream-status>
+                <orov-video id="camera1" border='1' style='width: 100%; height:100%; position:relative' location='forward' event-emitter="{{cockpitEventEmitter}}">
+                    <div id='twitchembed' style='position:absolute; top:0px; left:0px; z-index:33;'></div>
+                    <orov-twitch-stream-status style='position:absolute; top:0px; left:0px; z-index:33;' event-emitter="{{cockpitEventEmitter}}"></orov-twitch-stream-status>
 
-                <orov-horizon id="horizon" style='position:absolute; top:0px; left:0px; z-index:33; width:100%; height:100%' event-emitter="{{cockpitEventEmitter}}"></orov-horizon>
-                <div style='position:absolute; top:0px; left:0px; z-index:33; display:flex'>
-                  <orov-newui-time-slim  id="time-item-collapsed" style="margin:5px" event-emitter="{{cockpitEventEmitter}}"></orov-newui-time-slim>
-                  <orov-newui-power-slim  id="power-item-collapsed"  style="margin:5px" event-emitter="{{cockpitEventEmitter}}"></orov-newui-power-slim>
-                </div>
-              </orov-video>
+                    <orov-horizon id="horizon" style='position:absolute; top:0px; left:0px; z-index:33; width:100%; height:100%' event-emitter="{{cockpitEventEmitter}}"></orov-horizon>
+                    <div style='position:absolute; top:0px; left:0px; z-index:33; display:flex'>
+                        <orov-newui-time-slim id="time-item-collapsed" style="margin:5px" event-emitter="{{cockpitEventEmitter}}"></orov-newui-time-slim>
+                        <orov-newui-power-slim id="power-item-collapsed" style="margin:5px" event-emitter="{{cockpitEventEmitter}}"></orov-newui-power-slim>
+                    </div>
+                </orov-video>
             </div>
             <div id="newuiControlpad">
-              <div class="newui-item" id="heading-item">
-                <div class="center">
-                  <h4>{{__('Heading')}}</h4>
-                  <div id="newui-compass" class="center control">
+                <fieldset>
+                    <legend>{{__('Heading')}}</legend>
                     <orov-newui-compass class="center" heading="0" event-emitter="{{cockpitEventEmitter}}"></orov-newui-compass>
-                  </div>
-                </div>
-              </div>
-              <div class="newui-item" id="depth-item">
-                <div class="center">
-                  <h4>{{__('Depth')}}</h4>
-                  <!--<div id="newui-depth" class="center control"></div>-->
-                  <orov-newui-depth id="newui-depth" class="center control" event-emitter="{{cockpitEventEmitter}}"></orov-newui-depth>
-                </div>
-              </div>
-              <div class="newui-item" id="throttle-item">
-                <div class="center">
-                  <h4>{{__('Throttle')}}</h4>
-                  <orov-newui-throttle id="newui-throttle" class="center control" event-emitter="{{cockpitEventEmitter}}"></orov-newui-throttle>
-                </div>
-              </div>
-              <div class="newui-item" id="switches-item">
-                <div class="center">
-                  <h4>{{__('Switches')}}</h4>
-                  <div id="newui-switches" class="center control">
+                </fieldset>
+                <fieldset style="padding-bottom: 2em">
+                    <legend>{{__('Depth')}}</legend>
+                    <orov-newui-depth id="newui-depth" style="margin-top: 2.0em;" class="center control" event-emitter="{{cockpitEventEmitter}}"></orov-newui-depth>
+                </fieldset>
+                <fieldset style="padding-bottom: 1.2em">
+                    <legend>{{__('Throttle')}}</legend>
+                    <orov-newui-throttle id="newui-throttle" class="center control" event-emitter="{{cockpitEventEmitter}}"></orov-newui-throttle>
+                </fieldset>
+                <fieldset>
+                    <legend>{{__('Switches')}}</legend>
                     <orov-newui-switches class="center" event-emitter="{{cockpitEventEmitter}}"></orov-newui-switches>
-                  </div>
-                </div>
-              </div>              
-              <div class="newui-item" id="power-item">
-                <div class="center">
-                  <h4>{{__('Battery')}}</h4>
-                  <div id="newui-power" class="center control">
+                </fieldset>
+                <fieldset id="power-item">
+                    <legend>{{__('Battery')}}</legend>
                     <orov-newui-power id="power" event-emitter="{{cockpitEventEmitter}}"></orov-newui-power>
-                  </div>
-                </div>
-              </div>              
-              <div class="newui-item" short-layout$="{{short}}" id="time-item">
-                <div class="center">
-                  <h4>{{__('Time')}}</h4>
-                  <div id="newui-time" class="center control">
-                    <orov-newui-time event-emitter="{{cockpitEventEmitter}}" below-the-fold="{{testing}}"></orov-newui-time>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+                </fieldset>
+                <fieldset id="time-item">
+                    <legend>{{__('Time')}}</legend>
+                    <orov-newui-time event-emitter="{{cockpitEventEmitter}}""></orov-newui-time>
+                </fieldset>
 
+            </div>
         </div>
 
-      </div> <!--Placeholder for the UI plugin-->
+    </div>
+
+</div>
+<!--Placeholder for the UI plugin-->
