Animation performance optimizations
* Added index and bower. Basic init

* renaming stuff and added skeleton js file

* var name change

* Removed breaking shader pass

* Added prefixless to bower

* Updated compass to use css animations and not flip out when switching between 0 and 360

* Added hardware acceleration and bearing hold

* Fixed errors in compass opacity methods

* Depth, compass, and power all migrated to css animations

* Got throttle maxes to work

* implemented css animations for max throttle set

* Removed breaking shader pass

* Added prefixless to bower

* Updated compass to use css animations and not flip out when switching between 0 and 360

* Added hardware acceleration and bearing hold

* Fixed errors in compass opacity methods

* Depth, compass, and power all migrated to css animations

* Got throttle maxes to work

* implemented css animations for max throttle set

* added throttle animations for general control

* Added correct throttle sizing

* mapped opacity to sqrt for natural and informative changes

* removed old artifical horizon starting on new one

* got svg of track into ui

* Simple Horizon

* Finished less cpu intensive pitch and roll indicators

* Horizon concept

* added alert

* added button function to compass

* added ui slider

* added more sliding

* gyro and compass mode working

* commit before merge

* small comment

* removed preemptive color balance push

* Added the launch file back

* Pull request changes

* added small change to properties

* more idiomatic pattern to change ui elements

--- a/src/plugins/new-ui/cockpit.ejs
+++ b/src/plugins/new-ui/cockpit.ejs
@@ -12,6 +12,7 @@
 <link rel="import" href="components/diagnostics/diagnostics.html">
 <link rel="import" href="components/video/orov-video.html">
 <link rel="import" href="components/navigation-data/orov-horizon.html">
+<link rel="import" href="components/navigation-data/attitude-indicator.html">
 <link rel="import" href="components/connection-health/orov-ping-graph.html">
 <link rel="import" href="components/internet-stream/orov-twitch-stream-status.html">
 <link rel="import" href="components/settings-manager/orov-settings-manager.html">
@@ -56,7 +57,7 @@
                     <div id='twitchembed' style='position:absolute; top:0px; left:0px; z-index:33;'></div>
                     <orov-twitch-stream-status style='position:absolute; top:0px; left:0px; z-index:33;' event-emitter="{{cockpitEventEmitter}}"></orov-twitch-stream-status>
 
-                    <orov-horizon id="horizon" style='position:absolute; top:0px; left:0px; z-index:33; width:100%; height:100%' event-emitter="{{cockpitEventEmitter}}"></orov-horizon>
+                    <attitude-indicator id="horizon" style='position:absolute; top:0px; left:0px; z-index:33; width:100%; height:100%' event-emitter="{{cockpitEventEmitter}}"></attitude-indicator>
                     <div style='position:absolute; top:0px; left:0px; z-index:33; display:flex'>
                         <orov-newui-time-slim id="time-item-collapsed" style="margin:5px" event-emitter="{{cockpitEventEmitter}}"></orov-newui-time-slim>
                         <orov-newui-power-slim id="power-item-collapsed" style="margin:5px" event-emitter="{{cockpitEventEmitter}}"></orov-newui-power-slim>
