--- a/src/plugins/about/about.ejs
+++ b/src/plugins/about/about.ejs
@@ -20,49 +20,8 @@
 </paper-material>
 <script>
 var template = $('#t')[0];
-var saveData = (function () {
-    var a = document.createElement("a");
-    document.body.appendChild(a);
-    a.style = "display: none";
-    return function (data, fileName) {
-        var json = JSON.stringify(data),
-            blob = new Blob([json], {type: "octet/stream"}),
-            url = window.URL.createObjectURL(blob);
-        a.href = url;
-        a.download = fileName;
-        a.click();
-        window.URL.revokeObjectURL(url);
-    };
-}());
-
-function formatDate(d) {
-
-  var dd = d.getDate()
-  if ( dd < 10 ) dd = '0' + dd
-
-  var mm = d.getMonth()+1
-  if ( mm < 10 ) mm = '0' + mm
-
-  var yy = d.getFullYear() % 100
-  if ( yy < 10 ) yy = '0' + yy
-
-  return ""+yy+mm+dd
-}
-
-
 template._dumpReport = function(){
-    template.cockpitEventEmitter.emit("plugin.about.dumpReport",function(report){
-        var result = JSON.parse(report);
-        result.browserString=navigator.userAgent;
-        result.timestamp=Date.now().toString();
-        template.cockpitEventEmitter.emit("plugin.host-diagnostics.getbrowserlogs",function(logs){
-            result.console=logs;
-            report = JSON.stringify(result);
-            console.dir(JSON.parse(report));
-            saveData(result,`rovCrashReportingDump${Date.now().toString()}.json`)
-        });
-
-    });
+    template.cockpitEventEmitter.emit("plugin.about.downloadSystemInformation");
 }
 </script>
 </div>
