Added additional firmware buttons

--- a/src/plugins/rov-default-applets/_system_diagnostics.ejs
+++ b/src/plugins/rov-default-applets/_system_diagnostics.ejs
@@ -15,12 +15,24 @@
 <fieldset>
 <legend>Micro Controller Diags:</legend>    
 <paper-button raised id="resetMCUButton" on-tap="_resetMCU">Reset MCU</paper-button>
+<paper-button raised id="flashESCsButton" on-tap="_flashESCs">Flash ESCs</paper-button>
+<paper-button raised id="rebuildMCUFirmwareButton" on-tap="_rebuildMCUFirmware">Rebuild MCU Firmware</paper-button>
+<paper-button raised id="applyAllFirmwareUpdatesButton" on-tap="_applyAllFirmwareUpdates">Rebuild MCU Firmware</paper-button>
 </fieldset>
 </paper-material>
 <script>
 var template = $('#t')[0];
 template._resetMCU = function(){
     template.cockpitEventEmitter.emit("mcu.reset");
+}
+template._flashESCs = function(){
+    template.cockpitEventEmitter.emit("mcu.FlashESCs");
+}
+template._rebuildMCUFirmware = function(){
+    template.cockpitEventEmitter.emit("mcu.RebuildMCUFirmware");
+}
+template._applyAllFirmwareUpdates = function(){
+    template.cockpitEventEmitter.emit("mcu.UpdateFirmware");
 }
 </script>
 
