Added MCU reset capability.

--- a/src/plugins/rov-default-applets/_system_diagnostics.ejs
+++ b/src/plugins/rov-default-applets/_system_diagnostics.ejs
@@ -17,7 +17,7 @@
 <paper-button raised id="resetMCUButton" on-tap="_resetMCU">Reset MCU</paper-button>
 <paper-button raised id="flashESCsButton" on-tap="_flashESCs">Flash ESCs</paper-button>
 <paper-button raised id="rebuildMCUFirmwareButton" on-tap="_rebuildMCUFirmware">Rebuild MCU Firmware</paper-button>
-<paper-button raised id="applyAllFirmwareUpdatesButton" on-tap="_applyAllFirmwareUpdates">Rebuild MCU Firmware</paper-button>
+<paper-button raised id="applyAllFirmwareUpdatesButton" on-tap="_applyAllFirmwareUpdates">Check For Updates</paper-button>
 </fieldset>
 </paper-material>
 <script>
