3s load time with loading screen after .5s

--- a/src/plugins/about/about.ejs
+++ b/src/plugins/about/about.ejs
@@ -1,4 +1,6 @@
 
+  <link rel="import" href="components/paper-material/paper-material.html">
+  <link rel="import" href="components/paper-button/paper-button.html">
 <style>
     paper-button {
 
