--- a/src/plugins/new-ui/cockpit.ejs
+++ b/src/plugins/new-ui/cockpit.ejs
@@ -86,7 +86,7 @@
                 </fieldset>
                 <fieldset id="time-item">
                     <legend>{{__('Time')}}</legend>
-                    <orov-newui-time event-emitter="{{cockpitEventEmitter}}""></orov-newui-time>
+                    <orov-newui-time event-emitter="{{cockpitEventEmitter}}"></orov-newui-time>
                 </fieldset>
 
             </div>
