--- a/src/system-plugins/ui-manager/base.ejs
+++ b/src/system-plugins/ui-manager/base.ejs
@@ -68,7 +68,6 @@ ga('send', 'pageview');
     });
   });  
 </script>
-  </head>
 
   <script type='text/javascript' src="js/libs/eventemitter2.js"></script>
   <!--<script type='text/javascript' src="js/libs/bootstrap.min.js"></script>-->
@@ -84,9 +83,6 @@ ga('send', 'pageview');
   <script type='text/javascript' src='js/socketIOtoEmitterBridge.js'></script>  
   <script type='text/javascript' src="js/cockpit.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
-  <script type="text/javascript" src="plugin/new-ui/js/lib/0_jquery.svg.min.js"></script>
-  <script type="text/javascript" src="plugin/new-ui/js/lib/1_jquery.svgdom.min.js"></script>
-  <script type="text/javascript" src="plugin/new-ui/js/lib/2_jquery.svganim.min.js"></script>
 
   <script type="text/javascript" src="components/webcomponentsjs/webcomponents-lite.js"></script>
   <script>
@@ -98,17 +94,174 @@ ga('send', 'pageview');
       lazyRegister: true
     };
   </script>
-  <script>window.openrovtheme='<%=theme%>'</script>
+  <script>window.openrovtheme='<%=theme%>'</script>  
+  <link id="lazyScripts" rel="import" href="/all_scripts.html" async>
   <link rel="import" href="components/polymer/polymer.html">
-  <!-- Load the browser global services -->
-  <% for(var i=0; i<scripts.length; i++) {%>
-  <script type="text/javascript" src="<%= scripts[i] %>"></script><% } %>
+  <style>
+    body.loading #splash {
+      opacity: 1;
+      z-index: 0;
+    }
+    #splash {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      transition: opacity 300ms cubic-bezier(0,0,0.2,1);
+      opacity: 0;
+      will-change: opacity;
+      z-index: 9000;
+      background: url(...) no-repeat;
+      background-color: #E53935;
+    }
+#loader-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+}
+#loader {
+    display: block;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    width: 150px;
+    height: 150px;
+    margin: -75px 0 0 -75px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: #3498db;
 
-  <body>
+    -webkit-animation: spin 2s linear infinite; /* Chrome, Opera 15+, Safari 5+ */
+    animation: spin 2s linear infinite; /* Chrome, Firefox 16+, IE 10+, Opera */
+    z-index: 1001;
+}
+
+    #loader:before {
+        content: "";
+        position: absolute;
+        top: 5px;
+        left: 5px;
+        right: 5px;
+        bottom: 5px;
+        border-radius: 50%;
+        border: 3px solid transparent;
+        border-top-color: #e74c3c;
+
+        -webkit-animation: spin 3s linear infinite; /* Chrome, Opera 15+, Safari 5+ */
+        animation: spin 3s linear infinite; /* Chrome, Firefox 16+, IE 10+, Opera */
+    }
+
+    #loader:after {
+        content: "";
+        position: absolute;
+        top: 15px;
+        left: 15px;
+        right: 15px;
+        bottom: 15px;
+        border-radius: 50%;
+        border: 3px solid transparent;
+        border-top-color: #f9c922;
+
+        -webkit-animation: spin 1.5s linear infinite; /* Chrome, Opera 15+, Safari 5+ */
+          animation: spin 1.5s linear infinite; /* Chrome, Firefox 16+, IE 10+, Opera */
+    }
+
+    @-webkit-keyframes spin {
+        0%   { 
+            -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: rotate(0deg);  /* IE 9 */
+            transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
+        }
+        100% {
+            -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: rotate(360deg);  /* IE 9 */
+            transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
+        }
+    }
+    @keyframes spin {
+        0%   { 
+            -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: rotate(0deg);  /* IE 9 */
+            transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
+        }
+        100% {
+            -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: rotate(360deg);  /* IE 9 */
+            transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
+        }
+    }
+
+    #loader-wrapper .loader-section {
+        position: fixed;
+        top: 0;
+        width: 51%;
+        height: 100%;
+        background: #222;
+        z-index: 1000;
+    }
+
+    #loader-wrapper .loader-section.section-left {
+        left: 0;
+    }
+    #loader-wrapper .loader-section.section-right {
+        right: 0;
+    }
+
+    /* Loaded styles */
+    .loaded #loader-wrapper .loader-section.section-left {
+        -webkit-transform: translateX(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: translateX(-100%);  /* IE 9 */
+                transform: translateX(-100%);  /* Firefox 16+, IE 10+, Opera */
+
+        -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);  /* Android 2.1+, Chrome 1-25, iOS 3.2-6.1, Safari 3.2-6  */
+                transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);  /* Chrome 26, Firefox 16+, iOS 7+, IE 10+, Opera, Safari 6.1+  */
+    }
+    .loaded #loader-wrapper .loader-section.section-right {
+        -webkit-transform: translateX(100%);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: translateX(100%);  /* IE 9 */
+                transform: translateX(100%);  /* Firefox 16+, IE 10+, Opera */
+
+        -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);  /* Android 2.1+, Chrome 1-25, iOS 3.2-6.1, Safari 3.2-6  */
+                transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);  /* Chrome 26, Firefox 16+, iOS 7+, IE 10+, Opera, Safari 6.1+  */
+    }
+    .loaded #loader {
+        opacity: 0;
+
+        -webkit-transition: all 0.3s ease-out;  /* Android 2.1+, Chrome 1-25, iOS 3.2-6.1, Safari 3.2-6  */
+                transition: all 0.3s ease-out;  /* Chrome 26, Firefox 16+, iOS 7+, IE 10+, Opera, Safari 6.1+  */
+
+    }
+    .loaded #loader-wrapper {
+        visibility: hidden;
+
+        -webkit-transform: translateY(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: translateY(-100%);  /* IE 9 */
+                transform: translateY(-100%);  /* Firefox 16+, IE 10+, Opera */
+    
+        -webkit-transition: all 0.3s 1s ease-out;  /* Android 2.1+, Chrome 1-25, iOS 3.2-6.1, Safari 3.2-6  */
+                transition: all 0.3s 1s ease-out;  /* Chrome 26, Firefox 16+, iOS 7+, IE 10+, Opera, Safari 6.1+  */
+    }
+    
+  </style>
+  </head>
+  <body class="loading">
+  <div id="splash">
+    <!-- from https://ihatetomatoes.net/create-custom-preloading-screen/ -->
+		<div id="loader-wrapper">
+			<div id="loader"></div>
+
+			<div class="loader-section section-left"></div>
+			<div class="loader-section section-right"></div>
+
+		</div>    
+  </div>
 <link rel="import" href="components/platinum-sw/platinum-sw-register.html">
 <link rel="import" href="components/platinum-sw/platinum-sw-cache.html">
 <link rel="import" href="components/terms-of-use/terms-of-use.html">
-
 <!--TODO: Add logic to support either popout or popin(swapping) of applets-->
 <template id="t" is="dom-bind"  strip-whitespace>
  <terms-of-use style="z-index:9999;display:block;position:absolute;width:100%;heigh:100%;"></terms-of-use> 
@@ -127,9 +280,16 @@ ga('send', 'pageview');
 <app-route route="{{route}}" pattern="/:page" data={{routedata}} active="{{homeActive}}"></app-route>
 
 <link rel="import" href="components/ui-manager/orov-widget-registry.html">
-<orov-widget-registry event-emitter="{{cockpitEventEmitter}}">
+
+<orov-widget-registry id="widgetRegistry" event-emitter="{{cockpitEventEmitter}}">
   <%=JSON.stringify(webcomponents);%>
 </orov-widget-registry>
+<script>
+  Polymer.RenderStatus.afterNextRender(this.$.widgetRegistry, () => {
+    console.info("After render of windows registry");
+  });
+</script>
+<!--link id="lazyImports" rel="import" href="/all_imports.html" async-->
 
   <%
     var header = scriplets.find(function(item){return item.name=='header'});
@@ -151,6 +311,13 @@ ga('send', 'pageview');
   ga('set', 'page', '<%= scriplets[i].name %>');
   ga('set', 'dimension1', '<%= theme %>');
   ga('send', 'pageview');
+  var fn = function(){
+    console.info("on applet <%= scriplets[i].name %>");
+    removeSplashScreen();
+    window.removeEventListener('WebComponentsReady',fn);
+  }
+  window.addEventListener('WebComponentsReady', fn);  
+
 </script>
   <%- include(scriplets[i].path,{
     title: title,
@@ -174,6 +341,58 @@ ga('send', 'pageview');
     config: config
   })%>
   <%}%>
+  <script>
+    //removeSplashScreen();
+  </script>
 </template>
+  <script>
+
+function removeSplashScreen() {
+    var loadEl = document.getElementById('splash');
+    loadEl.addEventListener('transitionend', loadEl.remove);
+    document.body.classList.remove('loading');  
+}
+
+function setupLazyImportsBundleMetics() {
+  // Critical imports bundle perf.
+  var lazyBundle = document.querySelector('#lazyImports');
+  if (lazyBundle) {
+    var process = function() {
+      var entry = performance.getEntriesByName(lazyBundle.href)[0];
+      var str = `started @ ${entry.startTime.toFixed(2)} ms, took: ${entry.duration.toFixed(2)} ms`;
+      console.info('lazyImportsBundle: ' + str);
+      var wr = document.querySelector('#widgetRegistry');
+      wr.process();
+    };
+    if (lazyBundle.import && lazyBundle.import.readyState === 'complete'){
+      process()
+    } else {
+      lazyBundle.onload = function(e) {
+        process();
+      };
+    }
+  }
+}    
+
+function setupLazyScriptBundleMetics() {
+  // Critical imports bundle perf.
+  var lazyBundle = document.querySelector('#lazyScripts');
+  if (lazyBundle) {
+    lazyBundle.onload = function(e) {
+      var entry = performance.getEntriesByName(e.target.href)[0];
+      var str = `started @ ${entry.startTime.toFixed(2)} ms, took: ${entry.duration.toFixed(2)} ms`;
+      console.info('lazyScriptsBundle: ' + str);
+      window.cockpit.loadPlugins();
+    };
+  }
+}
+ setupLazyScriptBundleMetics();
+window.addEventListener('WebComponentsReady', function(e) {
+ // setupLazyImportsBundleMetics();
+   console.info("Web Componet Ready Event",$('#t')[0].rovOnline);
+
+ });
+
+  </script>
   </body>
 </html>
