--- a/src/system-plugins/ui-manager/base.ejs
+++ b/src/system-plugins/ui-manager/base.ejs
@@ -308,15 +308,16 @@ ga('send', 'pageview');
     if ((scriplets[i].name == 'header') || (scriplets[i].name == 'footer')|| (scriplets[i].name == 'head')){continue;}%>
   <template is="dom-if" restamp=true if="{{displaySection(routedata.page,'<%= scriplets[i].name %>')}}">
 <script>
-  ga('set', 'page', '<%= scriplets[i].name %>');
-  ga('set', 'dimension1', '<%= theme %>');
-  ga('send', 'pageview');
   var fn = function(){
     console.info("on applet <%= scriplets[i].name %>");
     removeSplashScreen();
     window.removeEventListener('WebComponentsReady',fn);
   }
   window.addEventListener('WebComponentsReady', fn);  
+  ga('set', 'page', '<%= scriplets[i].name %>');
+  ga('set', 'dimension1', '<%= theme %>');
+  ga('send', 'pageview');
+
 
 </script>
   <%- include(scriplets[i].path,{
@@ -378,12 +379,23 @@ function setupLazyScriptBundleMetics() {
   // Critical imports bundle perf.
   var lazyBundle = document.querySelector('#lazyScripts');
   if (lazyBundle) {
-    lazyBundle.onload = function(e) {
-      var entry = performance.getEntriesByName(e.target.href)[0];
+    var process = function(){
+      if (!window.cockpit){
+        setTimeout(process.bind(this),50);
+        return;
+      }
+      var entry = performance.getEntriesByName(lazyBundle.href)[0];
       var str = `started @ ${entry.startTime.toFixed(2)} ms, took: ${entry.duration.toFixed(2)} ms`;
       console.info('lazyScriptsBundle: ' + str);
       window.cockpit.loadPlugins();
-    };
+    }
+    if (lazyBundle.import && lazyBundle.import.readyState === 'complete'){
+      process()
+    } else {
+      lazyBundle.onload = function(e) {
+        process();
+      };
+    }
   }
 }
  setupLazyScriptBundleMetics();
